cleanup login
